<resources>
    <string name="app_name">IPTV</string>

    <string name="select_file_tv_title">Select TS File</string>
    <string name="select_file_item_tv_file_name">%1$s</string>
    <string name="select_file_popup_tv_waiting">Waiting</string>
    <string name="select_file_popup_tv_content">%1$s</string>

    <string name="main_navigation_tv_live">Live</string>
    <string name="main_navigation_tv_about">About</string>

    <string name="live_search_et_hint">Please input Channel Num.</string>
    <string name="live_item_tv_program_num">000</string>
    <string name="live_item_tv_program_num_result">%1$d</string>
    <string name="live_item_tv_program_name">Program Name</string>
    <string name="live_item_tv_program_name_result">%1$s</string>
    <string name="live_item_tv_eit_info">No EPG</string>
    <string name="live_item_tv_eit_info_result">%1$s\-%2$s\t%3$s</string>

    <string name="about_tv_title">About</string>
    <string name="about_tv_logo">IPTV</string>
    <string name="about_tv_about_app">About APP</string>
    <string name="about_tv_about_version">V1.3.0</string>
    <string name="about_tv_update">Check Update</string>

    <string name="search_btn_cancel">Cancel</string>
    <string name="search_tv_history">Search History</string>
    <string name="search_item_tv_tag_name_result">%1$s</string>

    <string name="favorite_tv_title">Favorite</string>
    <string name="favorite_item_tv_program_info_result">%1$d %2$s</string>

    <string name="player_tv_title_bar_result">%1$d  %2$s</string>
    <string name="player_tv_eit_info">No EPG</string>
    <string name="player_tv_eit_info_result">%1$s\-%2$s\t%3$s</string>
    <string name="player_popup_widow_tv_pmt_id_result">PMT Pid : 0x%1$s</string>

</resources>
