<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/live_item_ll_height">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <com.excellence.iptv.view.RobotoMediumTextView
            android:id="@+id/tv_program_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_micro"
            android:text="@string/live_item_tv_program_num"
            android:textColor="@color/live_item_program_name_text_color"
            android:textSize="@dimen/live_item_text_size" />

        <com.excellence.iptv.view.RobotoMediumTextView
            android:id="@+id/tv_program_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_program_num"
            android:layout_marginLeft="@dimen/margin_micro_super"
            android:layout_toRightOf="@+id/tv_program_num"
            android:text="@string/live_item_tv_program_name"
            android:textColor="@color/live_item_program_name_text_color"
            android:textSize="@dimen/live_item_text_size" />

        <com.excellence.iptv.view.RobotoRegularTextView
            android:id="@+id/tv_program_eit_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_program_name"
            android:text="@string/live_item_tv_eit_info"
            android:layout_below="@+id/tv_program_name"
            android:textColor="@color/live_item_program_eit_text_color"
            android:textSize="@dimen/live_item_text_size" />

        <ImageView
            android:id="@+id/iv_add_fav"
            android:layout_width="@dimen/live_item_add_favorite_iv_width"
            android:layout_height="@dimen/live_item_add_favorite_iv_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_little_little"
            android:src="@drawable/live_item_favourite_status" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_micro"
        android:background="@color/live_item_line_color" />


</RelativeLayout>