<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/live_actionbar_ll_height"
        android:background="@color/colorRed"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_micro_super"
            android:layout_weight="1"
            android:background="@drawable/live_search_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="@dimen/live_search_tv_height"
                android:layout_marginLeft="@dimen/margin_micro"
                android:layout_weight="1"
                android:hint="@string/live_search_et_hint"
                android:singleLine="true"
                android:textColor="@color/live_search_edit_text_color"
                android:textSize="@dimen/live_search_text_size"
                app:met_clearButton="true"
                app:met_hideUnderline="true" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="@dimen/live_search_iv_width"
                android:layout_height="@dimen/live_search_iv_height"
                android:layout_marginLeft="@dimen/margin_micro_super"
                android:layout_marginRight="@dimen/margin_micro_super"
                android:src="@drawable/ic_search" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/search_cancel_iv_width"
            android:layout_height="@dimen/search_cancel_iv_height"
            android:layout_marginLeft="@dimen/margin_micro_super"
            android:layout_marginRight="@dimen/margin_micro_super"
            android:background="@drawable/button_cancel"
            android:text="@string/search_btn_cancel"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_history_rl_height"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_micro_little_plus"
            android:text="@string/search_tv_history"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_micro_micro" />

        <ImageView
            android:layout_width="@dimen/search_delete_iv_width"
            android:layout_height="@dimen/search_delete_iv_height"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_micro_little_plus"
            android:src="@drawable/ic_delete" />
    </RelativeLayout>

    <GridView
        android:id="@+id/gv_tag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
